# RPG-json-translator

./: CMakeLists.txt  README.md  tran.cpp
header/: allinclude.h
src/: tran.cpp  tranconf.json
src/header/: allinclude.h  c.sh  tran.h
